--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1f55fa4b-c1e2-4747-bb65-8d3517d187df",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "032b65ba-b17a-404f-babc-86f1d531a2a5",
    "metadata": {},
@@ -18,10 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e244fa1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\louison.fresnais\\AppData\\Local\\miniconda3\\envs\\cobrapy\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import subprocess\n",
     "import os\n",
@@ -29,6 +40,7 @@
     "import numpy as np\n",
     "\n",
     "from cobra import io\n",
+    "from jproperties import Properties\n",
     "from mana import results_analysis\n",
     "\n",
     "#### Java must be installed on your machine to run this notebook\n"
@@ -70,62 +82,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "ef70895a",
    "metadata": {},
    "outputs": [],
    "source": [
     "### Load the metadata file\n",
-    "pheno = pd.read_csv(props.get(\"pheno\").data,sep=\"\\t\",index_col=0)"
+    "pheno = pd.read_csv(props.get(\"pheno\").data,sep=\"\\t\",index_col=0)\n",
+    "#path to input_data\n",
+    "input_path = props.get(\"working_path\").data+\"input_data/\""
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b11c0c4d",
+   "metadata": {},
+   "source": [
+    "### Create analysis directory and subdirectories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a1177855",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if \"analysis\" not in os.listdir(str(props.get(\"working_path\").data)):\n",
+    "    os.mkdir(str(props.get(\"working_path\").data)+\"analysis\")\n",
+    "for subdir in [\"analysis/dist_matrices\",\"analysis/reaction_clusters\",\"analysis/subnetwork_gmls\",\"analysis/subnetwork_reactions\"]:\n",
+    "    if subdir not in os.listdir(str(props.get(\"working_path\").data)+\"analysis\"):\n",
+    "        os.mkdir(str(props.get(\"working_path\").data)+subdir)"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca399d23-dac7-46d4-a389-30330ab2a8af",
    "metadata": {},
    "source": [
     "#### Compute the distance matrix for the differentially activated reactions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ac79e143-c59e-4d93-96af-ee48b2f809c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/amiodarone_24h_HighvsControl.tsv -g input_data/transitions.tab -o working_files/dist_matrices/amiodarone_24h_HighvsControl.tsv_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/dar_vs_darnoise.ipynb -g input_data/transitions.tab -o working_files/dist_matrices/dar_vs_darnoise.ipynb_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/valproic_acid_24h_high_noisesolvtime.txt -g input_data/transitions.tab -o working_files/dist_matrices/valproic_acid_24h_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/valproic_acid_24h_high_noisesolvtime_corrected_testvmh.txt -g input_data/transitions.tab -o working_files/dist_matrices/valproic_acid_24h_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/.ipynb_checkpoints -g input_data/transitions.tab -o working_files/dist_matrices/.ipynb_checkpoints_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/valproic_acid_24h_HighvsControl.tsv -g input_data/transitions.tab -o working_files/dist_matrices/valproic_acid_24h_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/amiodarone_24h_high_noisesolvtime.txt -g input_data/transitions.tab -o working_files/dist_matrices/amiodarone_24h_high_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/amiodarone_24h_high_noisesolvtime_corrected.txt -g input_data/transitions.tab -o working_files/dist_matrices/amiodarone_24h_high_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/valproic_acid_24h_high_noisesolvtime_corrected.txt -g input_data/transitions.tab -o working_files/dist_matrices/valproic_acid_24h_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/amiodarone_DAR_condnoise_filtered.txt -g input_data/transitions.tab -o working_files/dist_matrices/amiodarone_DAR_condnoise_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n",
-      "java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix -i input_data/recon2v2_biomass_corrected.sbml -n input_data/reaction_list/reconmap3_overlay.py -g input_data/transitions.tab -o working_files/dist_matrices/reconmap3_overlay.py_extracellexclude.tsv -gs input_data/global_cofactors.tab -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt -u &\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Read a reaction list file\n",
-    "for file in os.listdir(\"input_data/reaction_list/\"):\n",
-    "    cmd = \"java -cp met4j-toolbox-1.1.1-SNAPSHOT.jar\"\\\n",
-    "    + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix\"\\\n",
-    "    + \" -i input_data/recon2v2_biomass_corrected.sbml\"\\\n",
-    "    + \" -n input_data/reaction_list/\"+file\\\n",
-    "    + \" -g input_data/transitions.tab\" \\\n",
-    "    + \" -o working_files/dist_matrices/\"+'_'.join(file.split('_')[0:3])+'_extracellexclude.tsv'\\\n",
-    "    + \" -gs input_data/global_cofactors.tab\"\\\n",
-    "    + \" -e input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt\" \\\n",
-    "    + \" -u &\"\n",
-    "    print(cmd)\n",
-    "    #call ReactionDistanceMatrix Met4j app\n",
-    "    subprocess.run(cmd,capture_output=False,shell=True)"
    ]
   },
   {
@@ -146,14 +143,14 @@
    ],
    "source": [
     "#Read a reaction list file\n",
-    "for file in os.listdir(\"input_data/reaction_list/\"):\n",
+    "for file in os.listdir(props.get(\"working_path\").data+\"input_data/DARS/\"):\n",
     "    cmd = \"java -cp met4j-toolbox-1.2.1-SNAPSHOT.jar\"\\\n",
     "    + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix\"\\\n",
-    "    + \" -i input_data/recon2v2_biomass_corrected.sbml\"\\\n",
-    "    + \" -s input_data/reaction_list/\"+file\\\n",
-    "    + \" -o working_files/dist_matrices/\"+'_'.join(file.split('_')[0:3])+'_extracellexclude.tsv'\\\n",
-    "    + \" -sc input_data/recon22_scs_metex.txt\"\\\n",
-    "    + \" -re input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt\" \\\n",
+    "    + \" -i \"+input_path+\"recon2v2_biomass_corrected.sbml\"\\\n",
+    "    + \" -s \"+input_path+\"DARS/\"+file\\\n",
+    "    + \" -o \"+str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"+'_'.join(file.split('_')[0:3])+'_extracellexclude.tsv'\\\n",
+    "    + \" -sc \"+input_path+\"recon22_scs_metex.txt\"\\\n",
+    "    + \" -re \"+input_path+\"blocked_inactives_phh_exchange_exportextracell_reactions.txt\" \\\n",
     "    + \" -u &\"\n",
     "    print(cmd)\n",
     "    #call ReactionDistanceMatrix Met4j app\n",
@@ -162,28 +159,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "071f4706-61bb-4774-b9cf-1db7a366d2b2",
    "metadata": {},
    "source": [
     "#### Plot the dendrogram and identify interesting clusters of reactions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "9297716a-5265-4610-8349-747af3d5e142",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for mat in os.listdir(\"working_files/dist_matrices/\"):\n",
-    "    prefix = mat.replace('.tsv','')+'_cluster_'\n",
-    "    title = mat.split('/')[-1].replace('.csv','')+\" subnetwork reaction similarity\"\n",
-    "    matrix = pd.read_csv(\"working_files/dist_matrices/\"+mat,sep=',',index_col='id')\n",
-    "    matrix = matrix[~matrix.isin([np.nan, np.inf, -np.inf])]\n",
-    "    #thresh is the number of NA in row/col in order to remove this row/col\n",
-    "    matrix.dropna(inplace=True,axis=0,thresh=matrix.shape[0]*0.7)\n",
-    "    matrix.dropna(inplace=True,axis=1,thresh=matrix.shape[0]*0.7)"
    ]
   },
   {
@@ -262,16 +243,16 @@
    ],
    "source": [
     "### Read computed distances matrices\n",
-    "for mat in os.listdir(\"working_files/dist_matrices/\"):\n",
+    "for mat in os.listdir(str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"):\n",
     "    prefix = mat.replace('.tsv','')+'_cluster_'\n",
     "    title = mat.split('/')[-1].replace('.csv','')+\" subnetwork reaction similarity\"\n",
-    "    matrix = pd.read_csv(\"working_files/dist_matrices/\"+mat,sep=',',index_col='id')\n",
+    "    matrix = pd.read_csv(str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"+mat,sep=',',index_col='id')\n",
     "    #remove disconnected reactions\n",
     "    matrix = matrix[~matrix.isin([np.nan, np.inf, -np.inf])]\n",
     "    #thresh is the number of NA in row/col in order to remove this row/col\n",
     "    matrix.dropna(inplace=True,axis=0,thresh=matrix.shape[0]*0.7)\n",
     "    matrix.dropna(inplace=True,axis=1,thresh=matrix.shape[0]*0.7)\n",
-    "    results_analysis.extract_reactions_from_clusters(matrix,title=title,write_files=True,file_name='working_files/reaction_clusters/'+mat.replace('.csv','')+'_cluster',header=True)"
+    "    results_analysis.extract_reactions_from_clusters(matrix,title=title,write_files=True,file_name=str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+mat.replace('.csv','')+'_cluster',header=True)"
    ]
   },
   {
@@ -285,17 +266,18 @@
     "#load model\n",
     "#dict compartments id to compartments names\n",
     "comp = {\"c\":\"Cytoplasm\",\"m\":\"Mitochondrion\",\"x\":\"Peroxisome\",\"l\":\"Lysosome\",\"g\":\"Golgi appartus\",\"e\":\"Extracellular space\",\"r\":\"Endoplasic reticulum\",\"n\":\"Nucleus\",\"i\":\"Mitochondrial intermembrane space\"}\n",
-    "recon_model = io.load_json_model('input_data/recon2v2_biomass_corrected.json')\n",
+    "recon_model = io.load_json_model(input_path+\"recon2v2_biomass_corrected.json\")\n",
     "recon_model.id = 'recon2.2'\n",
     "#load hgnc data\n",
-    "mapping_file= 'input_data/hgnc_custom_set.txt'\n",
+    "mapping_file= input_path+\"hgnc_custom_set.txt\"\n",
     "hgnc_data = pd.read_csv(mapping_file, sep='\\t', dtype='unicode')\n",
     "#fill the df\n",
-    "for file in os.listdir(\"working_files/reaction_clusters/\"):\n",
+    "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
     "    results_analysis.generate_annotation_table(file,recon_model,hgnc_data)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b876b969-3932-49f6-89ad-05650a1bd46f",
    "metadata": {},
@@ -327,16 +309,16 @@
     "#TODO implement a thread pool for the subprocesses. \n",
     "file_prefix=\"\"\n",
     "#Read a reaction list file\n",
-    "for file in os.listdir(\"working_files/reaction_clusters/\"):\n",
+    "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
     "    if (file_prefix in file or file_prefix==\"\"):\n",
     "        cmd = \"java -cp met4j-toolbox-1.2.1-SNAPSHOT.jar\"\\\n",
     "        + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ExtractSubReactionNetwork\"\\\n",
-    "        + \" -i input_data/recon2v2_biomass_corrected.sbml\"\\\n",
-    "        + \" -s working_files/reaction_clusters/\"+file \\\n",
-    "        + \" -t working_files/reaction_clusters/\"+file \\\n",
-    "        + \" -o working_files/gmls/clusters/\"+file+'_undirected_r2_noisecond_extracell.gml'\\\n",
-    "        + \" -sc input_data/recon22_scs_metex.txt\"\\\n",
-    "        + \" -re input_data/blocked_inactives_phh_exchange_exportextracell_reactions.txt\"\\\n",
+    "        + \" -i \"+input_path+\"/recon2v2_biomass_corrected.sbml\"\\\n",
+    "        + \" -s \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
+    "        + \" -t \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
+    "        + \" -o \"+str(props.get(\"working_path\").data)+\"analysis/gmls/\"+file+'_undirected_r2_noisecond_extracell.gml'\\\n",
+    "        + \" -sc \"+input_path+\"/recon22_scs_metex.txt\"\\\n",
+    "        + \" -re \"+input_path+\"/blocked_inactives_phh_exchange_exportextracell_reactions.txt\"\\\n",
     "        + \" -st\"\\\n",
     "        + \" -u &\"\n",
     "        print(cmd)\n",
@@ -345,11 +327,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "21790d80-c01c-4284-ac70-ef3355ff78b7",
    "metadata": {},
    "source": [
-    "#### Quick subnetworks visualization"
+    "#### Get subnetworks reactions"
    ]
   },
   {
@@ -362,53 +345,12 @@
     "#For a temporary visualisation, use the results_analysis.visualize_gml function\n",
     "#For a complete visualization, use MetExplore Viz(https://metexplore.toulouse.inrae.fr/index.html/)\n",
     "pattern='.'\n",
-    "for file in os.listdir(\"working_files/gmls/clusters\"):\n",
+    "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/subnetworks_gmls/\"):\n",
     "    if pattern in file:\n",
-    "        rlist = results_analysis.get_node_list(\"working_files/gmls/clusters/\"+file)\n",
-    "        with open(\"working_files/subnetwork_reactions/\"+file.replace('.tab','').replace(\".gml\",'.txt'),'w') as w_hdler:\n",
+    "        rlist = results_analysis.get_node_list(str(props.get(\"working_path\").data)+\"analysis/subnetwork_gmls/\"+file)\n",
+    "        with open(str(props.get(\"working_path\").data)+\"analysis/subnetwork_reactions/\"+file.replace('.tab','').replace(\".gml\",'.txt'),'w') as w_hdler:\n",
     "            for r in rlist:\n",
     "                w_hdler.write(r+'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "id": "c3f31760-da68-41b9-8fb6-a416a378826e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "amiodarone_24h_high_noCoA_cluster1.tab_undirected_r2_noisecond.gml\n",
-      "amiodarone_24h_high_noCoA_cluster2.tab_undirected_r2_noisecond.gml\n"
-     ]
-    }
-   ],
-   "source": [
-    "#get files for a molecule\n",
-    "pattern = \".\"\n",
-    "reactionSCs = pd.read_csv('input_data/reactionSCs_recon2v2_csn_nocoa.tab',sep='\\t')\n",
-    "for file in os.listdir(\"working_files/gmls/clusters\"):\n",
-    "    if pattern in file:\n",
-    "        rlist = results_analysis.get_node_list(\"working_files/gmls/clusters/\"+file)\n",
-    "        scsSet = set()\n",
-    "        print(file)\n",
-    "        with open(\"working_files/subnetwork_reactions/\"+file.replace('.tab','').replace(\".gml\",'.txt'),'w') as w_hdler:\n",
-    "            for r in rlist:\n",
-    "                w_hdler.write(r+'\\n')\n",
-    "                if (str(list(reactionSCs[reactionSCs['ReactionID'] == r]['SideCpds'])[0]) != 'nan'):  \n",
-    "                    for elem in list(reactionSCs[reactionSCs['ReactionID'] == r]['SideCpds'])[0].split(','):\n",
-    "                        scsSet.add(str(elem))    \n",
-    "        with open(\"working_files/subnetwork_reactions/\"+file.replace('.tab','').replace(\".gml\",'sidecpds.txt'),'w') as w_hdler:\n",
-    "            for sc in scsSet:\n",
-    "                if(not str(sc) == 'nan'):\n",
-    "                    w_hdler.write(sc+'\\n')\n",
-    "#     with open('amio_3_odr.txt','w') as w_hdler:\n",
-    "#         for r in rlist:\n",
-    "#             w_hdler.write(r+'\\n')"
    ]
   }
  ],
