commenting code and working on analysis.ipynb

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -271,9 +271,11 @@
     "#load hgnc data\n",
     "mapping_file= input_path+\"hgnc_custom_set.txt\"\n",
     "hgnc_data = pd.read_csv(mapping_file, sep='\\t', dtype='unicode')\n",
+    "#reaction file ?\n",
+    "#glob.glob(\"working_files/computed_scores/\"+str(reaction_file).split('_')[0]+'*_computed_scores.tsv')[0]\n",
     "#fill the df\n",
     "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
-    "    results_analysis.generate_annotation_table(file,recon_model,hgnc_data)"
+    "    results_analysis.generate_annotation_table(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file,recon_model,hgnc_data,scores_file=)"
    ]
   },
   {
