--- a/master_notebook.ipynb
+++ b/master_notebook.ipynb
@@ -15,7 +15,8 @@
    "outputs": [],
    "source": [
     "%run ./partial_enumeration.ipynb\n",
-    "%run ./dars_calculation.ipynb"
+    "%run ./dars_calculation.ipynb\n",
+    "%run ./analysis.ipynb"
    ]
   }
  ],
