--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1f55fa4b-c1e2-4747-bb65-8d3517d187df",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "032b65ba-b17a-404f-babc-86f1d531a2a5",
    "metadata": {},
@@ -197,6 +199,7 @@
     "#Iterate to compute DARs between controls and treated conditions with each molecule\n",
     "if \"DARS\" not in os.listdir(props.get(\"working_path\").data):\n",
     "    os.mkdir(props.get(\"working_path\").data+\"/DARS\")\n",
+    "    os.mkdir(props.get(\"working_path\").data+\"/DARS_direction\")\n",
     "\n",
     "for molecule in str(props.get(\"cpds\").data).split('/'):\n",
     "    indices = [s for s in list(freq_table.index) if molecule in s]\n",
