update notesbooks (and clear outputs)

--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2bef5ac8-5c23-4ee6-85e6-8be81ed5ffe5",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,12 @@
     "# !pip install jproperties\n",
     "import os\n",
     "import glob\n",
-    "import math\n",
     "import warnings\n",
     "import itertools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from jproperties import Properties\n",
+    "from zipfile import ZipFile\n",
     "from mana import dars"
    ]
   },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f9743fd2",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ef70895a",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "bde656e4-ef21-4ca4-af31-bfc64b9e073d",
    "metadata": {},
    "outputs": [],
@@ -115,6 +115,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47ee54f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Load controls for all the tested chemicals in our study\n",
+    "#for testing purpose only, get modelisation results and unzip them\n",
+    "with ZipFile(props.get(\"working_path\").data+\"input_data/test_data/all_controls_24hr.zip\", 'r') as zObject:\n",
+    "      zObject.extractall(\n",
+    "                  path=props.get(\"working_path\").data+\\\n",
+    "                  \"control_24_hr/full_enum/\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "cedb0491",
@@ -125,19 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "c69fc7ff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\louison.fresnais\\AppData\\Local\\Temp\\ipykernel_7828\\539393999.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  condition_metadata = pheno[pheno[\"compound_name\"].isin(str(props.get(\"all_cpds\").data).split('/'))][(pheno[\"sacri_period\"] == props.get(\"time\").data)\\\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#pool control enumerated solutions per molecule and time,then compute activation frequencies\n",
     "freq_ctrls = dars.calculate_freq_ctrls(props.get(\"rListFile\").data, props.get(\"all_cpds\").data, \\\n",
@@ -180,31 +186,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "6bfa91c2-e386-41da-ad3a-3000a6a31188",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['amiodarone_High_24h_freq', 'amiodarone_Control_24h_freq'], dtype='object', name='Condition')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TODO INTEGRATE THE FORMULA RMD\n",
     "## Ignore warnings (warnings from the linter for division by zero errors, which are catched in the code)\n",
     "warnings.filterwarnings(action='ignore')\n",
     "#Iterate to compute DARs between controls and treated conditions with each molecule\n",
+    "reaction_prefix = \"R_\"\n",
     "if \"DARS\" not in os.listdir(props.get(\"working_path\").data):\n",
-    "    os.mkdir(props.get(\"working_path\").data+\"/DARS\")\n",
-    "    os.mkdir(props.get(\"working_path\").data+\"/DARS_direction\")\n",
+    "    os.mkdir(props.get(\"working_path\").data+\"DARS\")\n",
+    "if \"DARS_direction\" not in os.listdir(props.get(\"working_path\").data):\n",
+    "    os.mkdir(props.get(\"working_path\").data+\"DARS_direction\")\n",
     "\n",
     "for molecule in str(props.get(\"cpds\").data).split('/'):\n",
     "    indices = [s for s in list(freq_table.index) if molecule in s]\n",
-    "    if  \"ctrl\" not in indices[0]:\n",
+    "    if len(indices) < 2:\n",
+    "         raise ValueError(\"Less than two conditions for this molecule, we cannot compute DARs. Check previous steps of the workflow\")\n",
+    "    if  \"Control\" not in indices[0]:\n",
     "        indices.reverse()\n",
+    "    print(indices)\n",
     "    comp_freq = pd.DataFrame(freq_table.loc[[indices[0],indices[1]]]).dropna(axis=1).transpose()\n",
     "    print(comp_freq.columns)\n",
     "    comp_freq.columns = ['f_ctrl','f_treatment']\n",
@@ -213,27 +216,38 @@
     "    comp_freq = dars.rescale_and_rotate(comp_freq)\n",
     "    #compute scores\n",
     "    comp_freq = dars.compute_scores(comp_freq)\n",
-    "    DAR_list = []\n",
+    "    DAR_direction = {}\n",
     "    for reaction in comp_freq.data_id:\n",
     "        if comp_freq.loc[reaction].R2 > float(props.get(\"cutoff\").data):\n",
-    "            DAR_list.append(reaction)\n",
+    "            if((comp_freq.loc[reaction,\"f_treatment\"]>comp_freq.loc[reaction,\"f_ctrl\"])):\n",
+    "                  DAR_direction[reaction_prefix+reaction] = \"UP\"\n",
+    "            elif((comp_freq.loc[reaction,\"f_treatment\"]<comp_freq.loc[reaction,\"f_ctrl\"])):\n",
+    "                  DAR_direction[reaction_prefix+reaction] = \"DOWN\"\n",
+    "            else:\n",
+    "                  DAR_direction[reaction_prefix+reaction] = \"UNDETERMINED\" \n",
     "    if str(props.get(\"baseline_noise_filtering\").data) == \"True\":\n",
-    "        DAR_list_filtered = []\n",
+    "        DAR_list_filtered = {}\n",
     "        #filter according to associated vehicule and time noise\n",
     "        noise = pd.read_csv(props.get(\"working_path\").data+\"input_data/noise_data/med_R2_\"+\\\n",
     "                            pheno[pheno[\"compound_name\"] == molecule].Solvent.unique()[0]+\\\n",
     "                                \"_Control_\"+str(props.get(\"time\").data).replace(\" \",\"\")+\\\n",
     "                                    \"_combinations.tsv\",sep=\"\\t\").transpose()\n",
-    "        for reaction in DAR_list:\n",
-    "            if comp_freq.loc[reaction].R2 > noise.loc[reaction,0]*2:\n",
-    "                DAR_list_filtered.append(reaction)\n",
-    "        pd.DataFrame(DAR_list_filtered).to_csv(props.get(\"working_path\").data+\"/DARS/\"+molecule+\\\n",
+    "        for reaction in DAR_direction.keys():\n",
+    "            if comp_freq.loc[reaction.replace(reaction_prefix,\"\")].R2 > noise.loc[reaction.replace(reaction_prefix,\"\"),0]*2:\n",
+    "                 DAR_list_filtered[reaction] = DAR_direction[reaction]\n",
+    "        pd.DataFrame(DAR_list_filtered.keys()).to_csv(props.get(\"working_path\").data+\"/DARS/\"+molecule+\\\n",
     "                                      '_'+str(props.get(\"time\").data).replace(\" \",\"_\")+\\\n",
     "                                        '_'+str(props.get(\"cond\").data)+'noise_filtered.tsv','\\t',index=None, header=None)\n",
+    "        pd.DataFrame([DAR_list_filtered]).transpose().to_csv(props.get(\"working_path\").data+\"/DARS_direction/\"+molecule+\\\n",
+    "                                '_'+str(props.get(\"time\").data).replace(\" \",\"_\")+\\\n",
+    "                                '_'+str(props.get(\"cond\").data)+'noise_filtered.tsv','\\t', header=None)\n",
     "    else:\n",
-    "        pd.DataFrame(DAR_list).to_csv(props.get(\"working_path\").data+\"/DARS/\"+molecule+\\\n",
+    "        pd.DataFrame(DAR_direction.keys()).to_csv(props.get(\"working_path\").data+\"/DARS/\"+molecule+\\\n",
     "            '_'+str(props.get(\"time\").data).replace(\" \",\"_\")+\\\n",
     "                '_'+str(props.get(\"cond\").data)+'.tsv','\\t',index=None, header=None)\n",
+    "        pd.DataFrame([DAR_direction]).transpose().to_csv(props.get(\"working_path\").data+\"/DARS_direction/\"+molecule+\\\n",
+    "            '_'+str(props.get(\"time\").data).replace(\" \",\"_\")+\\\n",
+    "                '_'+str(props.get(\"cond\").data)+'.tsv','\\t', header=None)\n",
     "#reset warning parameter:\n",
     "warnings.filterwarnings(action='default')"
    ]
