--- a/master_notebook.ipynb
+++ b/master_notebook.ipynb
@@ -14,15 +14,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "#run partial enumeration notebook for control test case (and change props.properties accordingly)\n",
+    "with open(\"props.properties\",'r') as propsfile:\n",
+    "    props_data = propsfile.read()\n",
+    "    props_data = re.sub(\"dose=.*\",\"dose=Control\",props_data)\n",
+    "with open(\"props.properties\",\"w\") as propsfile:\n",
+    "    propsfile.write(props_data)\n",
     "%run ./partial_enumeration.ipynb\n",
+    "#run partial enumeration notebook for high dose test case (and change props.properties accordingly)\n",
+    "with open(\"props.properties\",'r') as propsfile:\n",
+    "    props_data = propsfile.read()\n",
+    "    props_data = re.sub(\"dose=.*\",\"dose=High\",props_data)\n",
+    "with open(\"props.properties\",\"w\") as propsfile:\n",
+    "    propsfile.write(props_data)\n",
+    "%run ./partial_enumeration.ipynb #change the props file\n",
+    "#run the dars_calculation notebook on the test case (based on the content of test folder and results of the partial enumeration notebook)\n",
     "%run ./dars_calculation.ipynb\n",
+    "#run the analysis notebook on the test case (based on the content of test folder and results of the dars_calculation notebook)\n",
     "%run ./analysis.ipynb"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "cobrapy",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
