save dars metric tables in dars_calculation.ipynb

--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -225,6 +225,10 @@
     "                  DAR_direction[reaction_prefix+reaction] = \"DOWN\"\n",
     "            else:\n",
     "                  DAR_direction[reaction_prefix+reaction] = \"UNDETERMINED\" \n",
+    "    comp_freq.loc[[s.replace('R_', '') for s in list(DAR_direction.keys())]].\\\n",
+    "        to_csv(props.get(\"working_path\").data+\"/DARS/\"+molecule+\\\n",
+    "                                      '_'+str(props.get(\"time\").data).replace(\" \",\"_\")+\\\n",
+    "                                        '_'+str(props.get(\"cond\").data)+\"dars_metrics.tsv\",sep=\"\\t\")\n",
     "    if str(props.get(\"baseline_noise_filtering\").data) == \"True\":\n",
     "        DAR_list_filtered = {}\n",
     "        #filter according to associated vehicule and time noise\n",
