add system option for background computation

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -28,6 +28,7 @@
     "import subprocess\n",
     "import os\n",
     "import glob\n",
+    "import platform\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -60,7 +61,16 @@
     "        props.load(config_file)\n",
     "except FileNotFoundError as e:\n",
     "    print(e)\n",
-    "    print(\"\\033[91m\\033[1m \"+\"You must provide a props.properties file\"+\" \\033[0m\\033[91m\")"
+    "    print(\"\\033[91m\\033[1m \"+\"You must provide a props.properties file\"+\" \\033[0m\\033[91m\")\n",
+    "#command line parameters\n",
+    "prefix = \"\"\n",
+    "suffix = \"\"\n",
+    "if platform.system() == \"Windows\":\n",
+    "    prefix = \"START /B \\\"\\\" \"\n",
+    "    suffix = \"\"\n",
+    "else:\n",
+    "    prefix = \"\"\n",
+    "    suffix = \" &\""
    ]
   },
   {
@@ -126,14 +136,14 @@
    "source": [
     "#Read a reaction list file\n",
     "for file in os.listdir(props.get(\"working_path\").data+\"/DARS/\"):\n",
-    "    cmd = \"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
+    "    cmd = prefix+\"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
     "    + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix\"\\\n",
     "    + \" -i \"+input_path+\"recon2v2_biomass_corrected.sbml\"\\\n",
     "    + \" -s \"+input_path+\"DARS/\"+file\\\n",
     "    + \" -o \"+str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"+'_'.join(file.split('_')[0:3])+'_extracellexclude.tsv'\\\n",
     "    + \" -sc \"+input_path+\"recon22_scs_metex.txt\"\\\n",
     "    + \" -re \"+input_path+\"blocked_inactives_phh_exchange_exportextracell_reactions.txt\" \\\n",
-    "    + \" -u &\"\n",
+    "    + \" -u\"+suffix\n",
     "    print(cmd)\n",
     "    #call ReactionDistanceMatrix Met4j app\n",
     "    subprocess.run(cmd,capture_output=False,shell=True)\n",
@@ -217,7 +227,7 @@
     "#Read a reaction list file\n",
     "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
     "    if (file_prefix in file or file_prefix==\"\"):\n",
-    "        cmd = \"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
+    "        cmd = prefix+\"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
     "        + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ExtractSubReactionNetwork\"\\\n",
     "        + \" -i \"+input_path+\"/recon2v2_biomass_corrected.sbml\"\\\n",
     "        + \" -s \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
@@ -226,7 +236,7 @@
     "        + \" -sc \"+input_path+\"/recon22_scs_metex.txt\"\\\n",
     "        + \" -re \"+input_path+\"/blocked_inactives_phh_exchange_exportextracell_reactions.txt\"\\\n",
     "        + \" -st\"\\\n",
-    "        + \" -u &\"\n",
+    "        + \" -u\"+suffix\n",
     "        print(cmd)\n",
     "        #call ReactionDistanceMatrix Met4j app\n",
     "        subprocess.run(cmd,capture_output=False,shell=True)"
