--- a/master_notebook.ipynb
+++ b/master_notebook.ipynb
@@ -14,6 +14,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#required modules\n",
+    "!pip install jupyterlab\n",
+    "!pip install ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import re\n",
     "#run partial enumeration notebook for control test case (and change props.properties accordingly)\n",
     "with open(\"props.properties\",'r') as propsfile:\n",
@@ -38,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cobrapy",
+   "display_name": "test_mana",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +65,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e909ccabb7a8ccf58a4271a67ee3d5ad589421080b6e726e08d33dd22e8d7d1e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
