uodate README.md add required module install for each notebook

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -25,6 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#required modules\n",
+    "!pip install jupyterlab\n",
+    "!pip install .\n",
+    "\n",
     "import subprocess\n",
     "import os\n",
     "import glob\n",
