--- a/partial_enumeration.ipynb
+++ b/partial_enumeration.ipynb
@@ -16,11 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install pandas\n",
-    "# !pip install numpy\n",
-    "# !pip install dexom-python\n",
-    "# !pip install jproperties\n",
-    "# !pip install . --users\n",
+    "#required modules\n",
+    "!pip install jupyterlab\n",
+    "!pip install .\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
