--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -25,8 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install pandas\n",
-    "# !pip install jproperties\n",
+    "#required modules\n",
+    "!pip install jupyterlab\n",
+    "!pip install .\n",
+    "\n",
     "import os\n",
     "import glob\n",
     "import warnings\n",
